Update website: modify html, delete old css, add new styles and images

--- a/about.html
+++ b/about.html
@@ -391,7 +391,7 @@ nav {
   <div class="container">
     <nav>
       <div class="brand">
-        <img src="Logo.jpg" alt="Logo" style="width: 40px;" />
+        <img src="img/Logo.jpg" alt="Logo" style="width: 40px;" />
         <div class="logo">PT.SHINTA KAZUKI SYSTEM</div>
       </div>
       <ul class="nav-links">
