--- a/index.html
+++ b/index.html
@@ -382,13 +382,13 @@
     <div class="header-pattern"></div>
     <div class="container">
       <nav>
-        <img src="/Gambar WhatsApp 2025-05-22 pukul 08.40.07_5cd782c1.jpg" alt="Logo" style="width: 40px;" />
+        <img src="img/Logo.jpg" alt="Logo" style="width: 40px;" />
         <div class="logo">PT.SHINTA KAZUKI SYSTEM</div>
         <ul class="nav-links">
-          <li><a href="#home.html">Home</a></li>
-          <li><a href="#about.html">About</a></li>
-          <li><a href="#services.html">Services</a></li>
-          <li><a href="#contact.html">Contact</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -398,8 +398,8 @@
     <div class="container">
       <div class="hero-content">
         <h1>Transforming Ideas Into Reality</h1>
-        <p>Kami adalah mitra terpercaya Anda dalam solusi teknologi, pelatihan, dan pengembangan perangkat lunak.</p>
-        <a href="#about" class="btn">Get Started</a>
+        <p>Kami adalah perusahaan terpercaya Anda dalam solusi teknologi, pelatihan, dan pengembangan perangkat lunak.</p>
+        <a href="home.html" class="btn">Get Started</a>
       </div>
     </div>
   </section>
