--- a/contact.html
+++ b/contact.html
@@ -189,7 +189,7 @@
     <div class="container">
       <nav>
         <div class="brand">
-          <img src="Logo.jpg" alt="Logo">
+          <img src="img/Logo.jpg" alt="Logo">
           <div class="logo">PT.SHINTA KAZUKI SYSTEM</div>
         </div>
         <ul class="nav-links">
