--- a/home.html
+++ b/home.html
@@ -1,156 +1,165 @@
 <!DOCTYPE html>
 <html lang="id">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Beranda - PT.Shinta Kazuki System</title>
-  <!-- Google Fonts: Poppins -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Beranda - PT.Shinta Kazuki System</title>
+    <!-- Google Fonts: Poppins -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap"
+      rel="stylesheet"
+    />
 
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: #f4f4f4;
-    }
-    header {
-      background-color: #dc3545; /* Merah Bootstrap */
-      color: white;
-      padding: 1rem 0;
-    }
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 20px;
-    }
-    nav {
-      display: flex;
-      align-items: center;
-      justify-content: space-between; /* Logo+nama kiri, menu kanan */
-    }
-    /* Flex container untuk logo dan nama PT */
-    .logo-container {
-      display: flex;
-      align-items: center;
-      gap: 1px; /* Jarak antara logo dan nama */
-    }
-    .logo {
-      width: 100px;
-      height: auto;
-    }
-    .logo-text {
-      font-size: 1.5rem;
-      font-weight: 600;
-      color: white;
-    }
-    .nav-links {
-      list-style: none;
-      display: flex;
-      gap: 20px;
-      margin: 0;
-      padding: 0;
-    }
-    .nav-links li a {
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    .nav-links li a:hover {
-      text-decoration: underline;
-    }
-    .hero {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
-      padding: 6rem 20px;
-      text-align: center;
-    }
-    .hero h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-    .hero p {
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
-    }
-    .btn {
-      padding: 12px 25px;
-      background: white;
-      color: #764ba2;
-      font-weight: bold;
-      text-decoration: none;
-      border-radius: 25px;
-      transition: background 0.3s;
-    }
-    .btn:hover {
-      background: #eee;
-    }
-    .about-preview {
-      background: white;
-      max-width: 1000px;
-      margin: 3rem auto;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-    .about-preview h2 {
-      color: #764ba2;
-      margin-bottom: 1rem;
-    }
-    .about-preview p {
-      color: #555;
-      line-height: 1.8;
-      margin-bottom: 1rem;
-    }
-    footer {
-      background: #333;
-      color: white;
-      text-align: center;
-      padding: 1.5rem;
-      margin-top: 4rem;
-    }
-  </style>
-</head>
-<body>
+    <style>
+      body {
+        margin: 0;
+        font-family: "Poppins", sans-serif;
+        background-color: #f4f4f4;
+      }
+      header {
+        background-color: #dc3545;
+        color: white;
+        padding: 0.5rem 0;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+      }
+      .container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 0 20px;
+      }
+      nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      .logo-container {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+      .logo {
+        width: 40px;
+        height: 40px;
+        object-fit: contain;
+      }
+      .logo-text {
+        font-size: 1.1rem;
+        font-weight: 600;
+        color: white;
+        letter-spacing: 0.5px;
+      }
+      .nav-links {
+        list-style: none;
+        display: flex;
+        gap: 20px;
+        margin: 0;
+        padding: 0;
+      }
+      .nav-links li a {
+        color: white;
+        text-decoration: none;
+        font-weight: 600;
+      }
+      .nav-links li a:hover {
+        text-decoration: underline;
+      }
 
-  <!-- Header -->
-  <header>
-    <div class="container">
-      <nav>
-        <div class="logo-container">
-          <img src="Logo.jpg" alt="Logo PT" class="logo" />
-          <div class="logo-text">PT.SHINTA KAZUKI SYSTEM</div>
-        </div>
-        <ul class="nav-links">
-          <li><a href="home.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+      /* Hero dan Konten lainnya tetap */
+      .hero {
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        color: white;
+        padding: 6rem 20px;
+        text-align: center;
+      }
+      .hero h1 {
+        font-size: 3rem;
+        margin-bottom: 1rem;
+      }
+      .hero p {
+        font-size: 1.2rem;
+        margin-bottom: 2rem;
+      }
+      .btn {
+        padding: 12px 25px;
+        background: white;
+        color: #764ba2;
+        font-weight: bold;
+        text-decoration: none;
+        border-radius: 25px;
+        transition: background 0.3s;
+      }
+      .btn:hover {
+        background: #eee;
+      }
+      .about-preview {
+        background: white;
+        max-width: 1000px;
+        margin: 3rem auto;
+        padding: 2rem;
+        border-radius: 10px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        text-align: center;
+      }
+      .about-preview h2 {
+        color: #764ba2;
+        margin-bottom: 1rem;
+      }
+      .about-preview p {
+        color: #555;
+        line-height: 1.8;
+        margin-bottom: 1rem;
+      }
+      footer {
+        background: #333;
+        color: white;
+        text-align: center;
+        padding: 1.5rem;
+        margin-top: 4rem;
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Header -->
+    <header>
+      <div class="container">
+        <nav>
+          <div class="logo-container">
+            <img src="img/Logo.jpg" alt="Logo PT" class="logo" />
+            <div class="logo-text">PT.SHINTA KAZUKI SYSTEM</div>
+          </div>
+          <ul class="nav-links">
+            <li><a href="home.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>Selamat Datang di PT Shinta Kazuki System</h1>
-    <p>Mitra terpercaya dalam pendidikan, pelatihan, dan pengembangan perangkat lunak di Indonesia.</p>
-    <a href="about.html" class="btn">Pelajari Lebih Lanjut</a>
-  </section>
+    <!-- Hero Section -->
+    <section class="hero">
+      <h1>Selamat Datang di PT Shinta Kazuki System</h1>
+      <p>
+        Mitra terpercaya dalam pendidikan, pelatihan, dan pengembangan perangkat
+        lunak di Indonesia.
+      </p>
+      <a href="about.html" class="btn">Pelajari Lebih Lanjut</a>
+    </section>
 
-  <!-- About Preview -->
-  <section class="about-preview">
-    <h2>Siapa Kami?</h2>
-    <p>
-      PT Shinta Kazuki System adalah perusahaan yang bergerak di bidang pendidikan, pelatihan, workshop, dan software development. Kami hadir untuk menjawab kebutuhan akan solusi digital dan edukatif yang efektif serta terjangkau.
-    </p>
-    <a href="about.html" class="btn">Baca Selengkapnya</a>
-  </section>
+    <!-- About Preview -->
+    <section class="about-preview">
+      <h2>Siapa Kami?</h2>
+      <p>
+        PT Shinta Kazuki System adalah perusahaan yang bergerak di bidang
+        pendidikan, pelatihan, workshop, dan software development. Kami hadir
+        untuk menjawab kebutuhan akan solusi digital dan edukatif yang efektif
+        serta terjangkau.
+      </p>
+      <a href="about.html" class="btn">Baca Selengkapnya</a>
+    </section>
 
-  <!-- Footer -->
-  <footer>
-    &copy; 2025 PT Shinta Kazuki System. All rights reserved.
-  </footer>
-
-</body>
+    <!-- Footer -->
+    <footer>&copy; 2025 PT Shinta Kazuki System. All rights reserved.</footer>
+  </body>
 </html>
