--- a/services.html
+++ b/services.html
@@ -134,7 +134,7 @@
     <div class="container">
       <nav>
         <div class="brand">
-          <img src="Logo.jpg" alt="Logo" />
+          <img src="img/Logo.jpg" alt="Logo" />
           <div class="logo">PT.SHINTA KAZUKI SYSTEM</div>
         </div>
         <ul class="nav-links">
