Update home.html dengan perubahan terbaru

--- a/home.html
+++ b/home.html
@@ -141,7 +141,7 @@
     <section class="hero">
       <h1>Selamat Datang di PT Shinta Kazuki System</h1>
       <p>
-        Mitra terpercaya dalam pendidikan, pelatihan, dan pengembangan perangkat
+        Perusahaan terpercaya dalam pendidikan, pelatihan, dan pengembangan perangkat
         lunak di Indonesia.
       </p>
       <a href="about.html" class="btn">Pelajari Lebih Lanjut</a>
